# Trabajo_InformaticaIndustrial_ARCHON

./: CMakeLists.txt  README.md  main.cpp  personaje.h
Trabajo_ARCHON/: Trabajo_ARCHON.slnx
Trabajo_ARCHON/Proyecto1/: Proyecto1.vcxproj
src/: ArenaCombate.cpp  ArenaCombate.h  Casilla.cpp  Casilla.h  Eleccion2_1jugador.cpp  Eleccion2_1jugador.h  Eleccion_1jugador.cpp  Eleccion_1jugador.h  Eleccion_2jugadores.cpp  Eleccion_2jugadores.h  Menu.cpp  Menu.h  Modos_juego.h  MotorGrafico.cpp  MotorGrafico.h  PantallaFinal.cpp  PantallaFinal.h  Pantalla_carga.cpp  Pantalla_carga.h  Partida.cpp  Partida.h  TRABAJO_ARCHON.slnx  Tablero.cpp  Tablero.h  Tablero_vista.cpp  Tablero_vista.h  Terrestre.h  Volador.h  app  dibujo_personajes.cpp  dibujo_personajes.h  habilidades_profes.h  main.cpp  personaje.cpp  personaje.h  ranking.cpp  ranking.h  stats.h  tipo_personaje.h  vector2D.cpp  (+1 more)
